<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HackIllinois</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="alert_label">Alert</string>
    <string name="hacker_title">Hacker</string>
    <string name="name_label">Name:</string>
    <string name="school_label">School:</string>
    <string name="email_label">Email:</string>
    <string name="bus_label">Bus:</string>
    <string name="phone_label">Phone:</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="hackillinois_label">HackIllinois</string>
    <string name="barcode_label">Please use this barcode to check in</string>
    <string name="login_label">LOG IN</string>
    <string name="skip_login_label">Skip Log In</string>
    <string name="forgot_password_label">I forgot my password</string>
    <string name="map_label">Map</string>
    <string name="contact_label">School Contact</string>
    <string name="transport_label">Transportation Route</string>
    <string name="sign_in_notice_label">Please log in to view profile details</string>

</resources>
