<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:id="@+id/sign_in_notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:gravity="center_horizontal"
        android:textSize="@dimen/text_size_large"
        android:text="@string/sign_in_notice_label"/>
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textSize="@dimen/text_size_large"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_secondary"
        android:hint="Email"
        android:inputType="textEmailAddress"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:textSize="@dimen/text_size_large"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_secondary"
        android:hint="Password"
        android:inputType="textPassword"/>
    <com.gc.materialdesign.views.ButtonFlat
        android:id="@+id/forgot_password_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_label"/>
    <com.gc.materialdesign.views.ButtonRectangle
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_label"/>

</LinearLayout>