<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center_horizontal|top">

    <ImageView
        android:layout_width="240dp"
        android:layout_height="0dp"
        android:layout_weight=".62"
        android:padding="64dp"
        android:gravity="top"
        android:contentDescription="@string/hackillinois_label"
        android:src="@drawable/logo"/>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".38"
        android:layout_margin="16dp"
        android:weightSum="1">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:contentPaddingLeft="16dp"
            card_view:contentPaddingRight="16dp"
            card_view:contentPaddingTop="8dp"
            card_view:contentPaddingBottom="8dp"
            card_view:cardCornerRadius="4dp">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.gc.materialdesign.views.ButtonRectangle
                    android:id="@+id/login_main_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="@color/blue_primary"
                    android:text="@string/login_label"/>
                <com.gc.materialdesign.views.ButtonFlat
                    android:id="@+id/skip_login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:background="@color/blue_primary"
                    android:text="@string/skip_login_label"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>


</LinearLayout>